--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,37 @@ node_modules/
 .cursor/
 dist/
 docs/
+
+# Flutter/Dart specific
+.dart_tool/
+.flutter-plugins
+.flutter-plugins-dependencies
+.packages
+.pub-cache/
+.pub/
+build/
+
+# Android specific
+android/.gradle/
+android/app/debug
+android/app/profile
+android/app/release
+android/gradle/
+android/local.properties
+android/key.properties
+*.keystore
+
+# iOS specific
+ios/Flutter/flutter_exports_environment.sh
+ios/Pods/
+ios/Runner.xcworkspace/
+ios/.symlinks/
+ios/Flutter/Generated.xcconfig
+ios/Flutter/ephemeral/
+
+# Web specific
+web/flutter_service_worker.js
+
+# macOS specific
+macos/Flutter/GeneratedPluginRegistrant.swift
+macos/Flutter/ephemeral/
